[gd_scene load_steps=5 format=3 uid="uid://bbk1gwyjpefe4"]

[ext_resource type="Script" uid="uid://dbjexilqmj2il" path="res://Scripts/options.gd" id="1_4tmxy"]
[ext_resource type="PackedScene" uid="uid://4dlbwtda12ur" path="res://Scenes/Fadeinout.tscn" id="1_prnvy"]
[ext_resource type="PackedScene" uid="uid://deb52c3hfo6ry" path="res://Scenes/settings_tab_container.tscn" id="3_qyyw6"]

[sub_resource type="SystemFont" id="SystemFont_qyyw6"]
font_names = PackedStringArray("Impact")

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tmxy")

[node name="Fade_transition" parent="." instance=ExtResource("1_prnvy")]
layout_mode = 0

[node name="Label" type="Label" parent="."]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
offset_top = 5.0
offset_right = 1920.0
offset_bottom = 115.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_qyyw6")
theme_override_font_sizes/font_size = 90
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48
alignment = 1

[node name="Settings_Tab_Container" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_qyyw6")]
layout_mode = 2
size_flags_vertical = 3

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 90
text = "EXIT
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
